# mcp-jenkins

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: python-publish.yml  test.yml
src/mcp_jenkins/: __init__.py  server.py
src/mcp_jenkins/jenkins/: __init__.py  _build.py  _client.py  _job.py
src/mcp_jenkins/models/: build.py  job.py
src/mcp_jenkins/server/: __init__.py  build.py  job.py
tests/: conftest.py
tests/test_jenkins/: test_build.py  test_client.py  test_job.py
tests/test_model/: test_job.py
