[project]
name = "mcp-jenkins"
version = "0.1.4"
description = "The Model Context Protocol (MCP) is an open-source implementation that bridges Jenkins with AI language models following Anthropic's MCP specification. This project enables secure, contextual AI interactions with Jenkins tools while maintaining data privacy and security."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "pydantic>=2.11.1",
    "python-jenkins>=1.8.2",
]

[[project.authors]]
name = "lanbaoshen"
email = "lanbaoshen@icloud.com"

[project.scripts]
mcp-jenkins = "mcp_jenkins:main"

[dependency-groups]
dev = [
    "mcp[cli]>=1.6.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
    "uv>=0.6.12",
]

[tool.uv]
package = true
